Fixed scrollbar issue

--- a/src/components/order/order.css
+++ b/src/components/order/order.css
@@ -3,10 +3,6 @@
     padding: 10px;
     margin: 10px;
 }
-.order>div{
-  height: 100%;
-  overflow-y: scroll;
-}
 ::-webkit-scrollbar {
   width: 3px;
   background-color: #ffffff;
@@ -44,12 +40,13 @@
     /* padding: 20px; */
     padding: 10px 0px;
     background-color: white;
+    height: 250px;
+    overflow-y: scroll;
 }
 
 @media screen and (min-width: 769px) {
   .order{
     width: calc(33vw - 40px);
     display: inline-block;
-    height: 250px;
   }
 }
